--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 annotated-types==0.7.0
 asgiref==3.10.0
 Django==5.2.7
-psycopg2-binary==2.9.11
+graphene==3.4.3
+graphene-django==3.2.3
+graphql-core==3.2.7
+graphql-relay==3.2.0
+promise==2.3
+psycopg2==2.9.11
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+six==1.17.0
 sqlparse==0.5.3
+text-unidecode==1.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
