--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ graphql-core==3.2.7
 graphql-relay==3.2.0
 promise==2.3
 psycopg2==2.9.11
+django-cors-headers==4.6.0
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
