--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 annotated-types==0.7.0
 asgiref==3.10.0
 Django==5.2.7
+django-cors-headers==4.9.0
 graphene==3.4.3
 graphene-django==3.2.3
 graphql-core==3.2.7
 graphql-relay==3.2.0
 promise==2.3
 psycopg2==2.9.11
-django-cors-headers==4.6.0
+psycopg2-binary==2.9.11
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
